--- a/index.html
+++ b/index.html
@@ -9,6 +9,26 @@
 </head>
 <body>
     
+    <div class="clock">
+
+        <div class="body">
+            <span id="hours">00</span>
+            <span class="info">Horas</span>
+        </div>
+
+        <div class="body">
+            <span id="minutes">00</span>
+            <span class="info">Minutos</span>
+        </div>
+
+        <div class="body">
+            <span id="seconds">00</span>
+            <span class="info">Segundos</span>
+        </div>
+
+
+        
+    </div>
 
     <script src="assets/script/script.js"></script>
 </body>
